<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        style="@style/Fill"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:fillViewport="true">
    <LinearLayout
            style="@style/Fill"
            android:orientation="vertical">
        <HorizontalScrollView
                style="@style/HorizontalScrollView">
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.phoneinfo.widget.VerticalTextView
                        style="@style/TextViewVertical"
                        android:text="@string/model_c"
                        oak:font="Roboto-Light.ttf"/>
                <oak.TextViewWithFont
                        style="@style/TextViewH1"
                        android:id="@+id/manufacturer"
                        oak:font="Roboto-Light.ttf"/>
            </LinearLayout>
        </HorizontalScrollView>
        <View
                style="@style/OnePxDarkBlueDivider"/>
        <HorizontalScrollView
                style="@style/HorizontalScrollView">
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.phoneinfo.widget.VerticalTextView
                        style="@style/TextViewVertical"
                        android:text="@string/name_c"
                        oak:font="Roboto-Light.ttf"/>
                <oak.TextViewWithFont
                        style="@style/TextViewH1"
                        android:id="@+id/name"
                        android:clickable="true"
                        oak:font="Roboto-Light.ttf"/>
            </LinearLayout>
        </HorizontalScrollView>
        <View
                style="@style/OnePxDarkBlueDivider"/>
        <HorizontalScrollView
                style="@style/HorizontalScrollView">
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.phoneinfo.widget.VerticalTextView
                        style="@style/TextViewVertical"
                        android:text="@string/os_c"
                        oak:font="Roboto-Light.ttf"/>
                <oak.TextViewWithFont
                        style="@style/TextViewH1"
                        android:id="@+id/os"
                        oak:font="Roboto-Light.ttf"/>
            </LinearLayout>
        </HorizontalScrollView>
        <View
                style="@style/OnePxDarkBlueDivider"/>
        <HorizontalScrollView
                style="@style/HorizontalScrollView">
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.phoneinfo.widget.VerticalTextView
                        style="@style/TextViewVertical"
                        android:text="@string/screen_c"
                        oak:font="Roboto-Light.ttf"/>
                <oak.TextViewWithFont
                        style="@style/TextViewH2"
                        android:id="@+id/screen"
                        oak:font="Roboto-Light.ttf"/>
            </LinearLayout>
        </HorizontalScrollView>
        <View
                style="@style/OnePxDarkBlueDivider"/>
        <HorizontalScrollView
                style="@style/HorizontalScrollView">
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.phoneinfo.widget.VerticalTextView
                        style="@style/TextViewVertical"
                        android:text="@string/tier_c"
                        oak:font="Roboto-Light.ttf"/>
                <oak.TextViewWithFont
                        style="@style/TextViewH2"
                        android:id="@+id/tier"
                        android:clickable="true"
                        android:text="WORST-OF-THE-WORST"
                        oak:font="Roboto-Light.ttf"/>
            </LinearLayout>
        </HorizontalScrollView>
        <View
                style="@style/OnePxDarkBlueDivider"/>
        <HorizontalScrollView
                style="@style/HorizontalScrollView">
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.phoneinfo.widget.VerticalTextView
                        style="@style/TextViewVertical"
                        android:text="@string/year_c"
                        oak:font="Roboto-Light.ttf"/>
                <oak.TextViewWithFont
                        style="@style/TextViewH2"
                        android:id="@+id/year"
                        android:text="2012"
                        oak:font="Roboto-Light.ttf"/>
            </LinearLayout>
        </HorizontalScrollView>
        <View
                style="@style/OnePxDarkBlueDivider"/>
    </LinearLayout>
</ScrollView>